--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "firebase": "^12.7.0",
-    "lucide-react": "^0.562.0"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "lucide-react": "0.460.0",
+    "firebase": "^12.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
