--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skypay-intelligence",
+  "name": "skypay-pro-ai",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^12.7.0",
-    "react-dom": "^19.2.3",
     "react": "^19.2.3",
-    "lucide-react": "^0.562.0"
+    "react-dom": "^19.2.3",
+    "lucide-react": "0.460.0",
+    "@google/genai": "latest",
+    "firebase": "^12.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
